# test-mini-cpp-project

./: .gitignore  CMakeLists.txt  conanfile.py  flake.nix  go.mod  run.bat  server.crt  server.go  server.key
.circleci/: config.yml
.github/workflows/: build.yml  post_comments.yml
src/: interface.hpp  loading.hpp  main.cpp  mylibrary.cpp
